Update missing locale string; fix button overflow issues

--- a/src/chrome/popup.scss
+++ b/src/chrome/popup.scss
@@ -79,17 +79,16 @@ li {
 	vertical-align: middle;
 	padding: 4px 16px 4px 4px;
 	white-space: nowrap;
-	margin: 2px;
 	cursor: pointer;
+	max-width: 23%;
+	overflow: hidden;
 
 	&:hover {
 		background: #444;
 	}
-
 }
 
 .#{$icon} {
-	display: inline-block;
 	background: url(printliminator.png) no-repeat;
 	width: 25px;
 	height: 25px;
